bk_ida/sjengida/c1/rook_mobility
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/rook_mobility/src/neval.c:695:6: error: use of undeclared identifier 'rook_mobility_dir'
v3 = rook_mobility_dir[v1]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/rook_mobility/src/obj/neval.o] Error 1
